Style: Fix overflow & missing margins

--- a/src/styles/_common.less
+++ b/src/styles/_common.less
@@ -565,6 +565,10 @@ body {
     margin-top: 80px;
   }
 
+  .page-heading {
+    margin-left: 20px;
+  }
+
   .page-body {
     margin-left: 20px;
   }
