--- a/src/styles/_governance.less
+++ b/src/styles/_governance.less
@@ -148,6 +148,7 @@
             resize: none;
             font-size: 14px;
             line-height: 22px;
+            overflow: hidden;
             @font-regular();
           }
         }
